--- a/style.css
+++ b/style.css
@@ -1,39 +1,11 @@
-@font-face {
-    font-family: 'EB Garamond';
-    font-style: normal;
-    font-weight: 400;
-    src: url('https://fonts.gstatic.com/s/ebgaramond/v31/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI9_.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: 'EB Garamond';
-    font-style: normal;
-    font-weight: 700;
-    src: url('https://fonts.gstatic.com/s/ebgaramond/v31/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI9_.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: 'EB Garamond';
-    font-style: italic;
-    font-weight: 400;
-    src: url('https://fonts.gstatic.com/s/ebgaramond/v31/SlGEmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI9_.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: 'EB Garamond';
-    font-style: italic;
-    font-weight: 700;
-    src: url('https://fonts.gstatic.com/s/ebgaramond/v31/SlGEmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI9_.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+/* Import EB Garamond from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
     --background-color: #f9f1f6;
     --blockquote-background-color: #cdc7cb;
     --border-radius: 0.25em;
+    --line-height: 1.3;
     --font-main: 'EB Garamond', Georgia, serif;
     --font-scale: 16px;
     --text-color: #6d5a66;
@@ -43,7 +15,22 @@
     --width: 88ch;
 }
 
-/* HTML Elements (alphabetical) */
+/* HTML Elements */
+
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    font-family: var(--font-main);
+    font-size: var(--font-scale);
+    line-height: var(--line-height);
+    margin: auto;
+    max-width: var(--width);
+    overflow-wrap: break-word;
+    padding: var(--spacing);
+    text-align: left;
+    word-wrap: break-word;
+}
+
 a {
     color: var(--text-color);
     cursor: pointer;
@@ -59,20 +46,6 @@ blockquote {
     border-radius: var(--border-radius);
     font-style: italic;
     padding: var(--spacing);
-}
-
-body {
-    background-color: var(--background-color);
-    color: var(--text-color);
-    font-family: var(--font-main);
-    font-size: var(--font-scale);
-    line-height: 1.3;
-    margin: auto;
-    max-width: var(--width);
-    overflow-wrap: break-word;
-    padding: var(--spacing);
-    text-align: left;
-    word-wrap: break-word;
 }
 
 button {
@@ -119,7 +92,7 @@ nav a {
 }
 
 strong {
-    font-style: bold;
+    font-weight: bold;
 }
 
 table {
@@ -127,11 +100,11 @@ table {
 }
 
 time {
-    font-family: monospace;
+    color: var(--text-color-darker);
     font-style: normal;
 }
 
-/* CSS Classes (alphabetical) */
+/* CSS Classes */
 .inline {
     width: auto !important;
 }
@@ -143,7 +116,7 @@ time {
 
 .title h1 {
     font-size: 1.5rem;
-    font-style: bold;
+    font-weight: bold;
     text-decoration: none;
 }
 
@@ -158,5 +131,5 @@ ul.blog-posts li {
 }
 
 ul.blog-posts li span {
-    flex: 0 0 10ch;
+    flex: 0 0 12ch;
 }
